--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
       repo: '',
       relativePath: false,
       coverpage: true,
-      onlyCover: false,
       loadNavbar: true,
-      loadSidebar: true,
+      loadSidebar: false,
       mergeNavbar: true,
 
       themeable: {
