--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
   </script>  
 
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
+  <script src="https://sdk.jinrishici.com/v2/browser/jinrishici.js" charset="utf-8"></script>
 
 </body>
 </html>
